--- a/accounting.html
+++ b/accounting.html
@@ -15,7 +15,10 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+
+        
+    </main>
     <footer>
         
         <nav>
