--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <title>Document</title>
+    <title>HR-management-system</title>
 </head>
 <body>
     <header>
@@ -76,5 +75,6 @@
     </nav>
     </footer>
     <script src="app.js"></script>
+    <script src="https://kit.fontawesome.com/770f47bb15.js" crossorigin="anonymous"></script>
 </body>
 </html>
