--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>HR-management-system</title>
 </head>
 <body>
@@ -75,6 +75,6 @@
     </nav>
     </footer>
     <script src="app.js"></script>
-    <script src="https://kit.fontawesome.com/770f47bb15.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
